fix(modal): add overflow:auto

--- a/style.css
+++ b/style.css
@@ -717,6 +717,7 @@ td.tableCardName {
 
     max-width: 70%;
     max-height: 80%;
+	overflow: auto;
 }
 
 @media (min-width: 650px) {
